--- a/RestaurantRater/RestaurantRater.csproj
+++ b/RestaurantRater/RestaurantRater.csproj
@@ -278,6 +278,8 @@
     <Content Include="Views\Shared\_Layout.cshtml" />
     <Content Include="Views\Restaurant\Index.cshtml" />
     <Content Include="Views\Restaurant\Create.cshtml" />
+    <Content Include="Views\Restaurant\Delete.cshtml" />
+    <Content Include="Views\Restaurant\Edit.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
